src/components/Footer.css
.footer {
  background-color: #333;
  padding: 30px 0;
}

.footer-container {
  display: flex;
  justify-content: space-around;
}

.footer-section {
  flex: 1;
}

.footer-section h3 {
  font-size: 1.2rem;
  margin-bottom: 10px;
  margin-left: 10px;
  justify-content: center;
  display: flex;
  color: #fff;
  font-weight: bold;
}

.footer-section p {
  font-size: 1.2rem;
  margin-bottom: 10px;
  justify-content: center;
  display: flex;
}

.footer-section ul {
  list-style: none;
  padding: 0;
  justify-content: center;
  display: flex;
}

.footer-section ul li {
  margin-bottom: 5px;
}

.footer-section ul li a {
  text-decoration: none;
  color: #007bff;
  margin-left: 50px;
}

.footer-section ul li a i{
  font-size: 45px;
  color: #007bff;
  margin-left: 40px;
  margin-top: 10px;
  margin-bottom: 10px;
  justify-content: center;
  display: flex;
}

.footer-section ul li a:hover {
  color: #007bff;
}

